--- a/specialties/st/index.html
+++ b/specialties/st/index.html
@@ -2,22 +2,104 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Telecom Courses</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style.css">
-</head>
+  <title>🖥️ ST - Systèmes Télécom</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<body class="bg-white p-5">
-  <div class="container">
-    <h1 class="text-primary mb-4">📡 RT - Réseaux Télécom</h1>
+  <!-- Bootstrap (optional) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Retro Pixel Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #525252;
+      color: #f6d4b1;
+      padding: 40px 20px;
+    }
+
+    h1, .lead {
+      font-family: 'Press Start 2P', monospace;
+      color: #f6d4b1;
+    }
+
+    h1 {
+      font-size: 20px;
+      margin-bottom: 30px;
+    }
+
+    .lead {
+      font-size: 12px;
+      margin-bottom: 20px;
+    }
+
+    .module-list {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      margin-bottom: 40px;
+    }
+
+    .module-item {
+      background-color: #f6d4b1;
+      color: #525252;
+      border: 3px solid #525252;
+      padding: 18px;
+      text-align: center;
+      font-family: 'Press Start 2P', monospace;
+      text-decoration: none;
+      font-size: 12px;
+      border-radius: 8px;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+      transition: transform 0.2s ease, box-shadow 0.3s ease;
+    }
+
+    .module-item:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
+    }
+
+    .back-button {
+      background-color: #f6d4b1;
+      color: #525252;
+      border: 2px solid #525252;
+      font-family: 'Press Start 2P', monospace;
+      font-size: 10px;
+      padding: 10px 20px;
+      text-decoration: none;
+      border-radius: 6px;
+      box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3);
+      display: inline-block;
+    }
+
+    .back-button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 18px rgba(0, 0, 0, 0.5);
+    }
+
+    .container {
+      max-width: 700px;
+      margin: auto;
+    }
+  </style>
+</head>
+<body>
+  <div class="container text-center">
+    <h1>🖥️ ST - Systèmes Télécom</h1>
     <p class="lead">Modules disponibles :</p>
-    <ul class="list-group mb-4">
-      <li class="list-group-item"><a href="#" class="text-decoration-none">Transmission Numérique</a></li>
-      <li class="list-group-item"><a href="#" class="text-decoration-none">Réseaux Informatiques</a></li>
-      <li class="list-group-item"><a href="#" class="text-decoration-none">Commutation</a></li>
-    </ul>
-    <a href="../../index.html" class="btn btn-secondary">⬅ Retour à l'accueil</a>
+
+    <div class="module-list">
+      <a href="#" class="module-item">Systèmes Numériques</a>
+      <a href="#" class="module-item">Traitement du Signal</a>
+      <a href="#" class="module-item">Systèmes Embarqués</a>
+      <a href="#" class="module-item">Microcontrôleurs</a>
+      <a href="#" class="module-item">Électronique Numérique</a>
+      <a href="#" class="module-item">Conception de Circuits</a>
+    </div>
+
+    <a href="../../index.html" class="back-button">⬅ Retour à l'accueil</a>
   </div>
 </body>
-
 </html>
