--- a/index.html
+++ b/index.html
@@ -13,6 +13,82 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
+    /* CRT Effect Base */
+    #crt-screen {
+      width: 100%;
+      height: 100%;
+      padding: 0;
+      margin: 0;
+      transform: perspective(900px) scaleY(0.98) scaleX(1.02);
+      transform-origin: center;
+      overflow: hidden;
+      box-sizing: border-box;
+    }
+
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      pointer-events: none;
+      z-index: 9998;
+      background: repeating-linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.05),
+        rgba(0, 0, 0, 0.05) 1px,
+        transparent 1px,
+        transparent 2px
+      );
+    }
+
+    body::after {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      pointer-events: none;
+      z-index: 9999;
+      background: rgba(255, 255, 255, 0.015);
+      animation: flicker 0.15s infinite;
+    }
+
+    @keyframes flicker {
+      0%, 100% { opacity: 0.01; }
+      50% { opacity: 0.025; }
+    }
+
+    /* VHS Overlay */
+    #vhs-overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 9997;
+      pointer-events: none;
+      mix-blend-mode: screen;
+      background: repeating-linear-gradient(
+        to bottom,
+        rgba(255, 0, 0, 0.02) 1px,
+        rgba(0, 255, 255, 0.02) 2px,
+        transparent 3px,
+        transparent 5px
+      );
+      animation: scanShift 0.3s infinite, rgbSplit 5s infinite alternate ease-in-out;
+    }
+
+    @keyframes scanShift {
+      0% { transform: translateY(0); }
+      100% { transform: translateY(-1px); }
+    }
+
+    @keyframes rgbSplit {
+      0% { filter: none; }
+      50% { filter: drop-shadow(-1px 0 red) drop-shadow(1px 0 cyan); }
+      100% { filter: none; }
+    }
+
     html, body {
       height: 100%;
       margin: 0;
@@ -44,56 +120,6 @@
       text-align: center;
       font-size: 12px;
       font-family: 'Press Start 2P', monospace;
-    }
-
-    /* CRT Screen container */
-    #crt-screen {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: 0;
-      pointer-events: none;
-      background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0.2) 100%);
-      mix-blend-mode: multiply;
-      transform: scale(1.02, 0.98) perspective(900px);
-    }
-
-    /* Scanlines */
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      pointer-events: none;
-      z-index: 9998;
-      background: repeating-linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0.05),
-        rgba(0, 0, 0, 0.05) 1px,
-        transparent 1px,
-        transparent 2px
-      );
-    }
-
-    /* Flicker effect */
-    body::after {
-      content: "";
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      pointer-events: none;
-      z-index: 9999;
-      background: rgba(255, 255, 255, 0.015);
-      animation: flicker 0.15s infinite;
-    }
-
-    @keyframes flicker {
-      0%   { opacity: 0.01; }
-      50%  { opacity: 0.025; }
-      100% { opacity: 0.01; }
     }
 
     h1, h3, .lead {
@@ -130,10 +156,12 @@
     .course-card .card-title {
       font-size: 18px;
       margin-bottom: 10px;
+      color: #f6d4b1;
     }
 
     .course-card .card-text {
       font-size: 10px;
+      color: #f6d4b1;
     }
 
     #splash-screen {
@@ -147,7 +175,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      z-index: 10000;
+      z-index: 99999;
       transition: opacity 1s ease;
     }
 
@@ -239,7 +267,6 @@
       text-align: center;
       font-size: 10px;
       text-decoration: none;
-      font-family: 'Press Start 2P', monospace;
       transition: background-color 0.2s ease, transform 0.2s ease;
     }
 
@@ -255,6 +282,7 @@
 </head>
 <body>
   <div id="crt-screen"></div>
+  <div id="vhs-overlay"></div>
 
   <button id="sidebarToggle" aria-label="Toggle menu">
     <svg width="36" height="24" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
