--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Updated: CRT & VHS effects intensified -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,22 +8,47 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Retro Pixel Font -->
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-  <!-- Fallback Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
-    /* CRT Effect Base */
-    #crt-screen {
-      width: 100%;
-      height: 100%;
-      padding: 0;
+    html::before {
+      content: "";
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      z-index: 9996;
+      pointer-events: none;
+      background: radial-gradient(
+        ellipse at center,
+        rgba(0, 0, 0, 0) 40%,
+        rgba(0, 0, 0, 0.4) 100%
+      );
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f6d4b1;
+      color: #525252;
       margin: 0;
-      transform: perspective(900px) scaleY(0.98) scaleX(1.02);
-      transform-origin: center;
-      overflow: hidden;
-      box-sizing: border-box;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      animation: vhs-glitch 0.2s infinite;
+    }
+
+    @keyframes vhs-glitch {
+      0%   { transform: translateX(0); }
+      20%  { transform: translateX(-0.5px); }
+      40%  { transform: translateX(0.5px); }
+      60%  { transform: translateX(-0.3px); }
+      80%  { transform: translateX(0.3px); }
+      100% { transform: translateX(0); }
+    }
+
+    body.menu-open {
+      background-color: #525252;
+      color: #f6d4b1;
     }
 
     body::before {
@@ -35,8 +61,8 @@
       z-index: 9998;
       background: repeating-linear-gradient(
         to bottom,
-        rgba(0, 0, 0, 0.05),
-        rgba(0, 0, 0, 0.05) 1px,
+        rgba(0, 0, 0, 0.12),
+        rgba(0, 0, 0, 0.12) 1px,
         transparent 1px,
         transparent 2px
       );
@@ -50,16 +76,18 @@
       height: 100vh;
       pointer-events: none;
       z-index: 9999;
-      background: rgba(255, 255, 255, 0.015);
-      animation: flicker 0.15s infinite;
+      background: rgba(255, 255, 255, 0.035);
+      animation: flicker 0.1s infinite;
     }
 
     @keyframes flicker {
       0%, 100% { opacity: 0.01; }
-      50% { opacity: 0.025; }
+      20% { opacity: 0.07; }
+      40% { opacity: 0.03; }
+      60% { opacity: 0.09; }
+      80% { opacity: 0.05; }
     }
 
-    /* VHS Overlay */
     #vhs-overlay {
       position: fixed;
       top: 0; left: 0;
@@ -70,12 +98,12 @@
       mix-blend-mode: screen;
       background: repeating-linear-gradient(
         to bottom,
-        rgba(255, 0, 0, 0.02) 1px,
-        rgba(0, 255, 255, 0.02) 2px,
-        transparent 3px,
-        transparent 5px
+        rgba(255, 0, 0, 0.04),
+        rgba(0, 255, 255, 0.04) 1px,
+        transparent 2px,
+        transparent 4px
       );
-      animation: scanShift 0.3s infinite, rgbSplit 5s infinite alternate ease-in-out;
+      animation: scanShift 0.2s infinite, rgbSplit 3s infinite alternate ease-in-out;
     }
 
     @keyframes scanShift {
@@ -87,28 +115,6 @@
       0% { filter: none; }
       50% { filter: drop-shadow(-1px 0 red) drop-shadow(1px 0 cyan); }
       100% { filter: none; }
-    }
-
-    html, body {
-      height: 100%;
-      margin: 0;
-      display: flex;
-      flex-direction: column;
-    }
-
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f6d4b1;
-      color: #525252;
-    }
-
-    body.menu-open {
-      background-color: #525252;
-      color: #f6d4b1;
-    }
-
-    body > .container {
-      flex: 1 0 auto;
     }
 
     footer {
@@ -156,12 +162,10 @@
     .course-card .card-title {
       font-size: 18px;
       margin-bottom: 10px;
-      color: #f6d4b1;
     }
 
     .course-card .card-text {
       font-size: 10px;
-      color: #f6d4b1;
     }
 
     #splash-screen {
@@ -179,16 +183,9 @@
       transition: opacity 1s ease;
     }
 
-    .splash-wrapper {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-
     .splash-wrapper h1 {
       font-size: 14px;
       margin-bottom: 10px;
-      color: #f6d4b1;
     }
 
     .loading-bar {
@@ -196,7 +193,6 @@
       height: 32px;
       background-color: #525252;
       border: 2px dashed #f6d4b1;
-      overflow: hidden;
     }
 
     .loading-progress {
@@ -232,14 +228,11 @@
       z-index: 1100;
       background-color: #525252;
       color: #f6d4b1;
-      border: 0px solid #f6d4b1;
+      border: none;
       padding: 6px 20px;
       cursor: pointer;
-      border-radius: 0px;
+      border-radius: 0;
       box-shadow: 0 8px 12px rgba(0, 0, 0, 0.25);
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
 
     #sidebarToggle svg rect {
@@ -262,26 +255,19 @@
       display: block;
       margin: 15px 0;
       padding: 12px;
-      background-color: transparent;
       color: #f6d4b1;
       text-align: center;
       font-size: 10px;
       text-decoration: none;
-      transition: background-color 0.2s ease, transform 0.2s ease;
     }
 
     #sidebar a:hover {
       background-color: #444;
       transform: translateY(-2px);
     }
-
-    .hidden {
-      display: none;
-    }
   </style>
 </head>
 <body>
-  <div id="crt-screen"></div>
   <div id="vhs-overlay"></div>
 
   <button id="sidebarToggle" aria-label="Toggle menu">
@@ -313,11 +299,9 @@
 
   <div class="container text-center py-5">
     <h1 class="mb-3">Telecom Courses Portal</h1>
-
     <div class="announcement-box">
       🚨 Welcome to the Telecom Courses Portal! Explore modules and find your path 🚨
     </div>
-
     <p class="lead mb-4">Choose your specialty:</p>
 
     <div class="row justify-content-center">
@@ -349,7 +333,6 @@
     Built by students, for students — Telecom 2025 📱
   </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const splash = document.getElementById("splash-screen");
     const progress = document.getElementById("progress-bar");
@@ -362,13 +345,9 @@
     const interval = setInterval(() => {
       percent += 2;
       progress.style.width = percent + "%";
-
       if (percent >= 100) {
         clearInterval(interval);
         splash.classList.add("fade-out");
-        splash.addEventListener("transitionend", () => {
-          toggleButton.classList.remove("hidden");
-        });
       }
     }, 25);
 
@@ -384,11 +363,9 @@
     });
 
     document.addEventListener('click', (e) => {
-      if (
-        sidebar.style.left === "0px" &&
-        !sidebar.contains(e.target) &&
-        !toggleButton.contains(e.target)
-      ) {
+      if (sidebar.style.left === "0px" &&
+          !sidebar.contains(e.target) &&
+          !toggleButton.contains(e.target)) {
         sidebar.style.left = "-100vw";
         body.classList.remove("menu-open");
       }
