--- a/specialties/st/index.html
+++ b/specialties/st/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>🖥️ ST - Systèmes Télécom</title>
+  <title>🖥️ S Systèmes Télécom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Bootstrap (optional) -->
