--- a/specialties/st/index.html
+++ b/specialties/st/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,6 +14,71 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
   <style>
+    body.menu-open {
+  background-color: #525252;
+  color: #f6d4b1;
+}
+
+#sidebar {
+  position: fixed;
+  top: 0;
+  left: -100vw;
+  height: 100vh;
+  width: 100vw;
+  background-color: #525252;
+  color: #f6d4b1;
+  transition: left 0.3s ease;
+  z-index: 9999;
+  font-family: 'Press Start 2P', monospace;
+  padding: 70px 20px 20px 20px;
+}
+
+#sidebarToggle {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 1100;
+  background-color: #525252;
+  color: #f6d4b1;
+  border: none;
+  padding: 6px 20px;
+  cursor: pointer;
+  border-radius: 0;
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.25);
+}
+
+#sidebarToggle svg rect {
+  height: 6px;
+  fill: #f6d4b1;
+}
+
+#closeSidebar {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background: transparent;
+  border: none;
+  font-size: 24px;
+  color: #f6d4b1;
+  cursor: pointer;
+}
+
+#sidebar a {
+  display: block;
+  margin: 15px 0;
+  padding: 12px;
+  color: #f6d4b1;
+  text-align: center;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+#sidebar a:hover {
+  background-color: #444;
+  transform: translateY(-2px);
+}
+
+
     body {
       font-family: 'Inter', sans-serif;
       background-color: #525252;
@@ -86,6 +152,26 @@
   </style>
 </head>
 <body>
+  <!-- Sidebar Toggle Button -->
+<button id="sidebarToggle" aria-label="Toggle menu">
+  <svg width="36" height="24" viewBox="0 0 36 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <rect y="0" width="36" height="6"/>
+    <rect y="9" width="36" height="6"/>
+    <rect y="18" width="36" height="6"/>
+  </svg>
+</button>
+
+<!-- Sidebar Content -->
+<div id="sidebar">
+  <h4>MENU</h4>
+  <button id="closeSidebar" aria-label="Close menu">✖</button>
+  <a href="/">Home</a>
+  <a href="/#about">About</a>
+  <a href="/specialties/rt/index.html">RT</a>
+  <a href="/specialties/st/index.html">ST</a>
+  <a href="/#contact">Contacts</a>
+</div>
+
   <div class="container text-center">
     <h1>ST - Systèmes Télécom</h1>
     <p class="lead">Wch tsh9 l3ziz</p>
@@ -101,5 +187,34 @@
 
     <a href="../../index.html" class="back-button"> back to home</a>
   </div>
+
+  <script>
+  const toggleButton = document.getElementById("sidebarToggle");
+  const sidebar = document.getElementById("sidebar");
+  const closeBtn = document.getElementById("closeSidebar");
+  const body = document.body;
+
+  toggleButton.addEventListener("click", () => {
+    const isOpen = sidebar.style.left === "0px";
+    sidebar.style.left = isOpen ? "-100vw" : "0px";
+    body.classList.toggle("menu-open", !isOpen);
+  });
+
+  closeBtn.addEventListener("click", () => {
+    sidebar.style.left = "-100vw";
+    body.classList.remove("menu-open");
+  });
+
+  document.addEventListener("click", (e) => {
+    if (sidebar.style.left === "0px" &&
+        !sidebar.contains(e.target) &&
+        !toggleButton.contains(e.target)) {
+      sidebar.style.left = "-100vw";
+      body.classList.remove("menu-open");
+    }
+  });
+</script>
+
+
 </body>
 </html>
