--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -213,16 +213,18 @@
     <a href="contact.html">Contact</a>
   </div>
 
-  <!-- Main content -->
-  <div class="main-content">
-    <h1>CONTACT ME</h1>
-    <div class="social-icons">
-      <a href="mailto:yourmail@example.com"><i class="fas fa-envelope"></i></a>
-      <a href="https://instagram.com/yourusername" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
-    </div>
+<!-- Main content -->
+<div class="main-content">
+  <h1>CONTACT ME</h1>
+  <div class="social-icons">
+    <a href="mailto:hichemboukerche26@gmail.com"><i class="fas fa-envelope"></i></a>
+    <a href="https://m.me/hichem.boukerche.2025" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
+    <a href="https://www.facebook.com/hichem.boukerche.2025" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://instagram.com/yourusername" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
   </div>
+</div>
 
   <!-- Modal -->
   <div class="modal fade" id="semesterModal" tabindex="-1" aria-labelledby="semesterModalLabel" aria-hidden="true">
