--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -217,7 +217,9 @@
 <div class="main-content">
   <h1>CONTACT ME</h1>
   <div class="social-icons">
-    <a href="mailto:hichemboukerche26@gmail.com"><i class="fas fa-envelope"></i></a>
+<a href="https://mail.google.com/mail/?view=cm&fs=1&to=hichemboukerche26@gmail.com" target="_blank">
+  <i class="fas fa-envelope"></i>
+</a>
     <a href="https://m.me/hichem.boukerche.2025" target="_blank"><i class="fab fa-facebook-messenger"></i></a>
     <a href="https://www.facebook.com/hichem.boukerche.2025" target="_blank"><i class="fab fa-facebook"></i></a>
     <a href="https://instagram.com/yourusername" target="_blank"><i class="fab fa-instagram"></i></a>
